2011-09-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* VisualMagick/installer/inc/body.isx: Set MagickConfigDirectory
	for DLL build so that .mgk files are put in application top
	directory.  This makes installation layout between static and DLL
	builds more similar.

2011-08-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/list.c (AppendImageToList): Documentation for
	AppendImageToList() was wrong.  Problem was reported by Brad
	Harder.

2011-08-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/display.c (MagickXMagickCommand): Display 'save' and
	'print' should display useful error details.  Problem was reported
	by Brad Harder.

2011-08-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/semaphore.c (AllocateSemaphoreInfo): Enable pthread mutex
	error checking if MAGICK_DEBUG is defined when the code is
	compiled.  This mode helps validate that mutexes are used
	correctly.  No longer enable recursive mutexes since the
	GraphicsMagick logic should be able to operate without this
	assistance.

2011-08-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dcm.c (DCM_ReadOffsetTable): Fix wrong cast noticed when
	compiling with LLVM.

2011-08-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/enhance.c (LevelImageChannel): Fix documented prototype.
	Problem was reported by Brad Harder.

2011-07-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_cache.c (AcquireOneCacheViewPixelInlined): Only use
	image colormap if the image storage class is PseudoClass.
	Eliminates a core dump when the image is in CMYK space.

2011-07-20  Glenn Randers-Pehrson  <glennrp@simple...>

	* coders/png.c: account for changed typecast of png_get_iCCP
	argument in libpng15 

2011-07-20  Glenn Randers-Pehrson  <glennrp@simple...>

	* configure.ac: look for libpng15, libpng14, libpng12, and libpng
        in that order.

2011-07-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
