@@ -39,6 +39,12 @@
 <p>2011-09-18  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>jpeg: Record that jpeg sources were updated to release v8c.</li>
+<li>lcms: Record that lcms sources were updated to release 2.2.</li>
+<li>png: Record that png sources were updated to release 1.5.4.</li>
+<li>tiff: Record that tiff sources were updated to release 4.0.0beta7.</li>
+<li>xml: Record that libxml2 sources were updated to release 2.7.8.</li>
+<li>zlib: Record that zlib sources were updated to release 1.2.5.</li>
 <li>VisualMagick/installer/inc/body.isx: Set MagickConfigDirectory
 for DLL build so that .mgk files are put in application top
 directory.  This makes installation layout between static and DLL
